@@ -1,22 +1,21 @@
 package com.internship.order_service.service.impl;
 
 import com.internship.order_service.client.UserServiceClient;
-import com.internship.order_service.dto.ItemDTO;
-import com.internship.order_service.dto.OrderRequestDTO;
-import com.internship.order_service.dto.OrderResponseDTO;
-import com.internship.order_service.dto.UserInfoDTO;
-import com.internship.order_service.exception.OrderProcessingException;
-import com.internship.order_service.exception.ResourceNotFoundException;
+import com.internship.order_service.dto.request.OrderRequestDto;
+import com.internship.order_service.dto.request.UpdateShippingAddressRequestDto;
+import com.internship.order_service.dto.response.OrderResponseDto;
+import com.internship.order_service.dto.response.UserInfoDto;
 import com.internship.order_service.exception.InvalidOrderStatusException;
+import com.internship.order_service.exception.OrderProcessingException;
+import com.internship.order_service.exception.OrderValidationException;
+import com.internship.order_service.exception.ResourceNotFoundException;
 import com.internship.order_service.exception.UserServiceUnavailableException;
-import com.internship.order_service.kafka.OrderEventProducer;
-import com.internship.order_service.mapper.ItemMapper;
 import com.internship.order_service.mapper.OrderMapper;
 import com.internship.order_service.model.Order;
 import com.internship.order_service.model.enums.OrderStatus;
-import com.internship.order_service.repository.ItemRepository;
 import com.internship.order_service.repository.OrderRepository;
-import com.internship.order_service.service.OrderService;
+import com.internship.order_service.service.OrderEventService;
+import com.internship.order_service.service.OrderLifecycleService;
 import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -27,13 +26,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 @RequiredArgsConstructor
-public class OrderServiceImpl implements OrderService {
+public class OrderLifecycleServiceImpl implements OrderLifecycleService {
 
     private static final String ORDER_NOT_FOUND_WITH_ID = "Order not found with id: ";
     private static final String ORDER_NOT_FOUND_WITH_IDS = "Orders not found with ids: ";
@@ -43,29 +40,28 @@ public class OrderServiceImpl implements OrderService {
     private static final String ORDER_STATUS_NULL = "Order status cannot be null";
     private static final String FAILED_TO_CREATE_ORDER = "Failed to create order";
     private static final String FAILED_TO_UPDATE_ORDER = "Failed to update order";
+    private static final String ONLY_PENDING_ORDER_CAN_UPDATE_SHIPPING_ADDRESS = "Shipping address can be updated only while order is pending";
+    private static final String FAILED_TO_UPDATE_SHIPPING_ADDRESS = "Failed to update shipping address";
 
     private final OrderRepository orderRepository;
-    private final ItemRepository itemRepository;
     private final OrderMapper orderMapper;
-    private final ItemMapper itemMapper;
     private final UserServiceClient userServiceClient;
-    private final OrderEventProducer orderEventProducer;
+    private final OrderEventService orderEventService;
 
     @Override
-    @Transactional
-    public OrderResponseDTO createOrder(OrderRequestDTO orderRequestDTO) {
+    public OrderResponseDto createOrder(OrderRequestDto orderRequestDto) {
         try {
-
-            Order order = orderMapper.toEntity(orderRequestDTO);
+            Order order = orderMapper.toEntity(orderRequestDto);
+            order.setStatus(OrderStatus.PENDING);
 
             if (order.getOrderItems() != null) {
                 order.getOrderItems().forEach(orderItem -> orderItem.setOrder(order));
             }
 
             Order savedOrder = orderRepository.save(order);
-            orderEventProducer.sendOrderCreatedEvent(savedOrder);
-            return toOrderResponseDTO(savedOrder);
+            orderEventService.saveCreated(savedOrder);
 
+            return toOrderResponseDTO(savedOrder);
         } catch (FeignException e) {
             throw new UserServiceUnavailableException(USER_SERVICE_UNAVAILABLE, e);
         } catch (Exception e) {
@@ -75,7 +71,7 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     @Transactional(readOnly = true)
-    public OrderResponseDTO getOrderById(Long id) {
+    public OrderResponseDto getOrderById(Long id) {
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(ORDER_NOT_FOUND_WITH_ID + id));
 
@@ -88,21 +84,14 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<OrderResponseDTO> getOrdersByIds(List<Long> ids) {
+    public List<OrderResponseDto> getOrdersByIds(List<Long> ids) {
         List<Order> orders = orderRepository.findByIdIn(ids);
         if (orders == null || orders.isEmpty()) {
             throw new ResourceNotFoundException(ORDER_NOT_FOUND_WITH_IDS + ids);
         }
 
         try {
-            Set<String> userEmails = orders.stream()
-                    .map(Order::getUserEmail)
-                    .collect(Collectors.toSet());
-
-            return orders.stream()
-                    .map(this::toOrderResponseDTO)
-                    .collect(Collectors.toList());
-
+            return orders.stream().map(this::toOrderResponseDTO).toList();
         } catch (FeignException e) {
             throw new UserServiceUnavailableException(USER_SERVICE_UNAVAILABLE, e);
         }
@@ -110,7 +99,7 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<OrderResponseDTO> getOrdersByStatus(OrderStatus orderStatus) {
+    public List<OrderResponseDto> getOrdersByStatus(OrderStatus orderStatus) {
         validateOrderStatus(orderStatus);
 
         List<Order> orders = orderRepository.findByStatus(orderStatus);
@@ -119,10 +108,7 @@ public class OrderServiceImpl implements OrderService {
         }
 
         try {
-            return orders.stream()
-                    .map(this::toOrderResponseDTO)
-                    .collect(Collectors.toList());
-
+            return orders.stream().map(this::toOrderResponseDTO).toList();
         } catch (FeignException e) {
             throw new UserServiceUnavailableException(USER_SERVICE_UNAVAILABLE, e);
         }
@@ -130,17 +116,9 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     @Transactional(readOnly = true)
-    public Page<ItemDTO> getAllAvailableItems(int page, int size) {
-        PageRequest pageable = PageRequest.of(page, size, Sort.by("id").ascending());
-        return itemRepository.findAll(pageable)
-                .map(itemMapper::toDTO);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<OrderResponseDTO> getOrdersByUserEmail(String userEmail, int page, int size) {
+    public Page<OrderResponseDto> getOrdersByUserEmail(String userEmail, int page, int size) {
         try {
-            UserInfoDTO user = userServiceClient.getUserInfoByEmail(userEmail);
+            UserInfoDto user = userServiceClient.getUserInfoByEmail(userEmail);
 
             if (user == null || user.id() == null) {
                 throw new ResourceNotFoundException(USER_NOT_FOUND_WITH_EMAIL + userEmail);
@@ -149,14 +127,16 @@ public class OrderServiceImpl implements OrderService {
             Pageable pageable = PageRequest.of(page, size, Sort.by("creationDate").descending());
             return orderRepository.findAllByUserId(user.id(), pageable)
                     .map(order -> {
-                        OrderResponseDTO orderResponseDTO = orderMapper.toDTO(order);
-                        return new OrderResponseDTO(
-                                orderResponseDTO.id(),
-                                orderResponseDTO.userId(),
-                                orderResponseDTO.status(),
-                                orderResponseDTO.creationDate(),
-                                orderResponseDTO.orderItems(),
-                                user
+                        OrderResponseDto orderResponseDto = orderMapper.toDTO(order);
+                        return new OrderResponseDto(
+                                orderResponseDto.id(),
+                                orderResponseDto.userId(),
+                                orderResponseDto.status(),
+                                orderResponseDto.creationDate(),
+                                orderResponseDto.shippingAddress(),
+                                orderResponseDto.orderItems(),
+                                user,
+                                orderResponseDto.discountPercent()
                         );
                     });
 
@@ -166,17 +146,15 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    @Transactional
-    public OrderResponseDTO updateOrderById(Long id, OrderRequestDTO orderRequestDTO) {
+    public OrderResponseDto updateOrderById(Long id, OrderRequestDto orderRequestDto) {
         try {
             Order existingOrder = orderRepository.findById(id)
                     .orElseThrow(() -> new ResourceNotFoundException(ORDER_NOT_FOUND_WITH_ID + id));
 
-            orderMapper.updateEntityFromDTO(orderRequestDTO, existingOrder);
+            orderMapper.updateEntityFromDTO(orderRequestDto, existingOrder);
             Order savedOrder = orderRepository.save(existingOrder);
 
             return toOrderResponseDTO(savedOrder);
-
         } catch (FeignException e) {
             throw new UserServiceUnavailableException(USER_SERVICE_UNAVAILABLE, e);
         } catch (Exception e) {
@@ -185,24 +163,50 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    @Transactional
+    public OrderResponseDto updateShippingAddress(Long id, UpdateShippingAddressRequestDto requestDto) {
+        try {
+            Order order = orderRepository.findById(id)
+                    .orElseThrow(() -> new ResourceNotFoundException(ORDER_NOT_FOUND_WITH_ID + id));
+
+            if (order.getStatus() != OrderStatus.PENDING) {
+                throw new OrderValidationException(ONLY_PENDING_ORDER_CAN_UPDATE_SHIPPING_ADDRESS);
+            }
+
+            order.setShippingAddress(requestDto.shippingAddress().trim());
+            Order savedOrder = orderRepository.save(order);
+            orderEventService.saveShippingAddressUpdated(savedOrder);
+
+            return toOrderResponseDTO(savedOrder);
+
+        } catch (FeignException e) {
+            throw new UserServiceUnavailableException(USER_SERVICE_UNAVAILABLE, e);
+        } catch (OrderValidationException | ResourceNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new OrderProcessingException(FAILED_TO_UPDATE_SHIPPING_ADDRESS, e);
+        }
+    }
+
+    @Override
     public void deleteOrderById(Long id) {
-        Order order = orderRepository.findById(id)
+        orderRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(ORDER_NOT_FOUND_WITH_ID + id));
 
         orderRepository.deleteById(id);
     }
 
-    private OrderResponseDTO toOrderResponseDTO(Order order) {
-        OrderResponseDTO orderResponseDTO = orderMapper.toDTO(order);
-        UserInfoDTO userInfo = userServiceClient.getUserInfoByEmail(order.getUserEmail());
-        return new OrderResponseDTO(
-                orderResponseDTO.id(),
-                orderResponseDTO.userId(),
-                orderResponseDTO.status(),
-                orderResponseDTO.creationDate(),
-                orderResponseDTO.orderItems(),
-                userInfo
+    private OrderResponseDto toOrderResponseDTO(Order order) {
+        OrderResponseDto orderResponseDto = orderMapper.toDTO(order);
+        UserInfoDto userInfo = userServiceClient.getUserInfoByEmail(order.getUserEmail());
+        return new OrderResponseDto(
+                orderResponseDto.id(),
+                orderResponseDto.userId(),
+                orderResponseDto.status(),
+                orderResponseDto.creationDate(),
+                orderResponseDto.shippingAddress(),
+                orderResponseDto.orderItems(),
+                userInfo,
+                orderResponseDto.discountPercent()
         );
     }
 
